Fixed deprecated use of Class#newInstance()